--- a/_sass/_user_vars.scss
+++ b/_sass/_user_vars.scss
@@ -1,10 +1,10 @@
 // theme #1
-$primary-color:  #0077CC;
-$accent-color: #f66733;
-$title-color: #522d80;
-$header-text-color: #fff;
-$header-color: #336699;
-$header-background-opacity: 0.5;
+// $primary-color:  #0077CC;
+// $accent-color: #f66733;
+// $title-color: #522d80;
+// $header-text-color: #fff;
+// $header-color: #336699;
+// $header-background-opacity: 0.5;
 
 // // theme #2
 // $primary-color:  #c3073f;
@@ -75,14 +75,14 @@ $header-background-opacity: 0.5;
 // $header-background-opacity: 0.4;
 // $header-background-invert: 0%;
 
-// // theme #10
-// $primary-color:  #374785;
-// $accent-color: #f76c6c;
-// $title-color: #b95050;
-// $header-color: #a8d0e6;
-// $header-text-color: #24305e;
-// $header-background-opacity: 0.4;
-// $header-background-invert: 100%;
+// theme #10
+$primary-color:  #041540;
+$accent-color: #d4cbac;
+$title-color: #b95050;
+$header-color: #474a4c;
+$header-text-color: #24305e;
+$header-background-opacity: 0.4;
+$header-background-invert: 100%;
 
 // // theme #11
 // $primary-color:  #9e5a63;
