--- a/_sass/_user_vars.scss
+++ b/_sass/_user_vars.scss
@@ -78,8 +78,8 @@
 // theme #10
 $primary-color:  #041540;
 $accent-color: #d4cbac;
-$title-color: #b95050;
-$header-color: #474a4c;
+$title-color: #041540;
+$header-color: #4a98cc;
 $header-text-color: #24305e;
 $header-background-opacity: 0.4;
 $header-background-invert: 100%;
